syntax = "proto3";

option go_package = "github.com/aalsa16/golang-microservices/proto";

message GetQuoteRequest {
    string uuid = 1;
}

message GetQuoteResponse {
    string quote = 1;
    string author = 2;
    string created_at = 3;
}

service QuoteService {
    rpc GetQuote(GetQuoteRequest) returns (GetQuoteResponse);
    rpc GetAllQuotes(GetQuoteRequest) returns (stream GetQuoteResponse);
}